Added changelog and java 8 map